Added a trick to compute a^{-1} mod p

--- a/rsa.tex
+++ b/rsa.tex
@@ -556,7 +556,12 @@ avec la clé privée, ce qui permet à n'importe qui de le déchiffrer
 	\end{cproof}
 \end{thm}
 
-\subsection{Optimisation}
+\subsection{Optimisations}
+\begin{pr}
+	Soient $a \in \esN, p \in \esP$ tels que $(a,p)=1$. \[
+		a^{p-2} \equiv_p a^{p-1}a^{-1} \equiv_p a^{-1}
+	\]
+\end{pr}
 \begin{pr}
 	Soient $a,b,c \in \esN, p \in \esP$. \[
 		b \equiv_{p-1} c
