--- a/rsa.tex
+++ b/rsa.tex
@@ -251,7 +251,7 @@ de toute façon, les réels ne servent à rien ici.
 		\begin{align*}
 			a^p
 			&= \left(1+\left(a-1\right)\right)^p && \text{artifice de calcul} \\
-			&= \sum_{k=0}p \binom pk(a-1)^k1^{p-k} && \text{binôme de Newton} \\
+			&= \sum_{k=0}^p\binom pk(a-1)^k1^{p-k} && \text{binôme de Newton} \\
 			&\equiv_p 1 + (a-1)^p && \text{TODO pourquoi ?}
 		\end{align*}
 
